[gd_scene load_steps=49 format=3 uid="uid://cfwrxc737j8iv"]

[ext_resource type="Texture2D" uid="uid://b4rs0qkyv8lcy" path="res://sprite-sheet/flyenemy.png" id="1"]
[ext_resource type="Script" path="res://script/enemies/Enemy.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://bf4ubatiredib" path="res://scenes/particles/HitParticles.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://djtaa166gll2v" path="res://scenes/enemies/EnemyBullet.tscn" id="4_w0yy0"]
[ext_resource type="PackedScene" uid="uid://cdga3r26ndxlq" path="res://scenes/gui/Meat.tscn" id="5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3wf3s"]
atlas = ExtResource("1")
region = Rect2(0, 192, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptw2t"]
atlas = ExtResource("1")
region = Rect2(160, 192, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_21n5t"]
atlas = ExtResource("1")
region = Rect2(320, 192, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjxhe"]
atlas = ExtResource("1")
region = Rect2(480, 192, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ml3os"]
atlas = ExtResource("1")
region = Rect2(640, 192, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0al5"]
atlas = ExtResource("1")
region = Rect2(800, 192, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ceko3"]
atlas = ExtResource("1")
region = Rect2(0, 288, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_lshc8"]
atlas = ExtResource("1")
region = Rect2(160, 288, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbsqr"]
atlas = ExtResource("1")
region = Rect2(320, 288, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4js1"]
atlas = ExtResource("1")
region = Rect2(480, 288, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5djh"]
atlas = ExtResource("1")
region = Rect2(640, 288, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_anrg1"]
atlas = ExtResource("1")
region = Rect2(800, 288, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_utqna"]
atlas = ExtResource("1")
region = Rect2(960, 288, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_cap8w"]
atlas = ExtResource("1")
region = Rect2(0, 96, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_gh4ss"]
atlas = ExtResource("1")
region = Rect2(160, 96, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_v13t7"]
atlas = ExtResource("1")
region = Rect2(320, 96, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_sn78m"]
atlas = ExtResource("1")
region = Rect2(480, 96, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4537"]
atlas = ExtResource("1")
region = Rect2(640, 96, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_evi2w"]
atlas = ExtResource("1")
region = Rect2(800, 96, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_pb262"]
atlas = ExtResource("1")
region = Rect2(0, 0, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8lbn"]
atlas = ExtResource("1")
region = Rect2(160, 0, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxoja"]
atlas = ExtResource("1")
region = Rect2(320, 0, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_70djn"]
atlas = ExtResource("1")
region = Rect2(480, 0, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ryhy"]
atlas = ExtResource("1")
region = Rect2(640, 0, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ltug"]
atlas = ExtResource("1")
region = Rect2(800, 0, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wf8a"]
atlas = ExtResource("1")
region = Rect2(960, 0, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_x703u"]
atlas = ExtResource("1")
region = Rect2(1120, 0, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_013r6"]
atlas = ExtResource("1")
region = Rect2(1280, 0, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgumj"]
atlas = ExtResource("1")
region = Rect2(0, 0, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ecav"]
atlas = ExtResource("1")
region = Rect2(160, 0, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ww8r"]
atlas = ExtResource("1")
region = Rect2(320, 0, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfc7u"]
atlas = ExtResource("1")
region = Rect2(480, 0, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8myjw"]
atlas = ExtResource("1")
region = Rect2(640, 0, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5r002"]
atlas = ExtResource("1")
region = Rect2(800, 0, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhsj5"]
atlas = ExtResource("1")
region = Rect2(960, 0, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbpky"]
atlas = ExtResource("1")
region = Rect2(1120, 0, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnofs"]
atlas = ExtResource("1")
region = Rect2(1280, 0, 160, 96)

[sub_resource type="SpriteFrames" id="110"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wf3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptw2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21n5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjxhe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ml3os")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0al5")
}],
"loop": false,
"name": &"attack",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ceko3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lshc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbsqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4js1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5djh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_anrg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utqna")
}],
"loop": false,
"name": &"death",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cap8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gh4ss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v13t7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sn78m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4537")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evi2w")
}],
"loop": false,
"name": &"hit",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pb262")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8lbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxoja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70djn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ryhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ltug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wf8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x703u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_013r6")
}],
"loop": true,
"name": &"idle",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgumj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ecav")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ww8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfc7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8myjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5r002")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhsj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbpky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnofs")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}]

[sub_resource type="CapsuleShape2D" id="111"]
radius = 50.7375
height = 101.475

[sub_resource type="RectangleShape2D" id="113"]
size = Vector2(53, 25.9064)

[sub_resource type="RectangleShape2D" id="114"]
size = Vector2(98.4376, 64)

[sub_resource type="CircleShape2D" id="CircleShape2D_tsn8b"]
radius = 309.273

[sub_resource type="CircleShape2D" id="116"]
radius = 433.493

[node name="FlyEnemy" type="CharacterBody2D"]
show_behind_parent = true
light_mask = 4
collision_layer = 4
script = ExtResource("3")
hitParticle = ExtResource("4")
meat = ExtResource("5")
bullet = ExtResource("4_w0yy0")
drop_rate = 1
health = 3
fly = true
range = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(-5, 5)
sprite_frames = SubResource("110")
animation = &"hit"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 41)
shape = SubResource("111")

[node name="SearchArea" type="Area2D" parent="."]
light_mask = 4
visibility_layer = 2
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SearchArea"]
modulate = Color(0.886275, 0.517647, 0, 1)
position = Vector2(76, 42)
shape = SubResource("113")

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(0.262421, 0)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(87.9564, 40)
shape = SubResource("114")

[node name="PositionToPlayer" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PositionToPlayer"]
modulate = Color(0.882353, 0.290196, 0.388235, 1)
self_modulate = Color(0, 0, 0, 1)
position = Vector2(1, 42)
shape = SubResource("CircleShape2D_tsn8b")

[node name="ChaseArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseArea"]
modulate = Color(0.160784, 0.0588235, 0.0588235, 1)
position = Vector2(0, 42)
shape = SubResource("116")

[node name="KnockbackTime" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="StunTime" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AttackDelay" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, 42)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="SearchArea" to="." method="_on_SearchArea_body_entered"]
[connection signal="body_exited" from="SearchArea" to="." method="_on_SearchArea_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_AttackArea_body_exited"]
[connection signal="body_entered" from="PositionToPlayer" to="." method="_on_PositionToPlayer_body_entered"]
[connection signal="body_exited" from="PositionToPlayer" to="." method="_on_PositionToPlayer_body_exited"]
[connection signal="body_entered" from="ChaseArea" to="." method="_on_ChaseArea_body_entered"]
[connection signal="body_exited" from="ChaseArea" to="." method="_on_ChaseArea_body_exited"]
[connection signal="timeout" from="KnockbackTime" to="." method="_on_knockback_time_timeout"]
[connection signal="timeout" from="StunTime" to="." method="_on_stun_time_timeout"]
[connection signal="timeout" from="AttackDelay" to="." method="_on_attack_delay_timeout"]
